--- a/core/res/src/main/res/values-fr/strings.xml
+++ b/core/res/src/main/res/values-fr/strings.xml
@@ -1087,6 +1087,8 @@
   <string name="transaction_history_transaction_from_address">de : %s</string>
   <string name="transaction_history_transaction_to_address">à : %s</string>
   <string name="transaction_history_transaction_validator">validateur : %s</string>
+  <string name="transaction_notifications_warning_description">Les notifications sont activées, mais elles ne fonctionneront pas tant que vous n\'aurez pas autorisé les notifications dans les paramètres de votre appareil.</string>
+  <string name="transaction_notifications_warning_title">Notifications de transaction</string>
   <string name="transfer_min_amount_error">Minimum %s</string>
   <string name="transfer_notification_invalid_minimum_transaction_amount_text">Le montant minimum pour effectuer cette transaction est %1$s.</string>
   <string name="try_to_load_data_again_button_title">Réessayez</string>
