--- a/core/res/src/main/res/values-ja/strings.xml
+++ b/core/res/src/main/res/values-ja/strings.xml
@@ -61,6 +61,13 @@
   <string name="app_settings_theme_mode_system">システムのデフォルト</string>
   <string name="app_settings_theme_selector_title">テーマ</string>
   <string name="app_settings_title">アプリ設定</string>
+  <string name="auth_info_add_wallet_title">ウォレットを追加</string>
+  <string name="auth_info_subtitle">ログインするウォレットを選択する</string>
+  <string name="auth_info_title">お帰りなさい！</string>
+  <plurals name="auth_wallet_hardware_description">
+    <item quantity="other">%d 枚のカード</item>
+  </plurals>
+  <string name="auth_wallet_mobile_description">スマートフォンウォレット</string>
   <string name="backup_complete_description">ウォレットのバックアップが正常に完了しました。</string>
   <string name="backup_complete_seed_description">これらの単語は紛失した場合、復元できません。必ず安全な場所に保管してください。</string>
   <string name="backup_complete_title">バックアップが完了しました</string>
@@ -846,6 +853,7 @@
   <string name="send_date_format">%1$s 、 %2$s</string>
   <string name="send_destination_tag_field">宛先タグ</string>
   <string name="send_enter_address_field">アドレスを入力</string>
+  <string name="send_enter_address_field_ens">ENS名またはアドレスを入力</string>
   <string name="send_error_address_same_as_wallet">アドレスはウォレットアドレスと同じです</string>
   <string name="send_error_dust_amount_format">最低額は%sです</string>
   <string name="send_error_dust_change_format">最小の変更は%sです</string>
@@ -927,11 +935,15 @@
   <string name="send_validation_invalid_amount">無効な金額</string>
   <string name="send_validation_invalid_fee">手数料が残高を超えています</string>
   <string name="send_validation_invalid_total">合計金額が残高を超えています</string>
+  <string name="send_with_swap_change_token_alert_message">トークンを変更してもよろしいですか？ 変更後、以前のデータはリセットされます。</string>
+  <string name="send_with_swap_change_token_alert_title">トークンの変更</string>
   <string name="send_with_swap_confirm_title">スワップして送信</string>
   <string name="send_with_swap_notification_text">トークンを送信すれば、送信中に変換されます。受信者は必要なものをシームレスに受け取ります。</string>
   <string name="send_with_swap_recipient_amount_success_title">受信者は受け取ります</string>
   <string name="send_with_swap_recipient_amount_text">受信者に送信されます</string>
   <string name="send_with_swap_recipient_amount_title">受取金額</string>
+  <string name="send_with_swap_remove_convert_alert_message">変換をキャンセルしてもよろしいですか？ 変更後、以前のデータはリセットされます。</string>
+  <string name="send_with_swap_remove_convert_alert_title">キャンセルの確認</string>
   <string name="send_with_swap_title">スワップして送信</string>
   <string name="sent_transaction_sent_title">取引が送信されました</string>
   <string name="settings_card_settings_footer">設定したいカードまたはリングをスキャンするために準備してください。</string>
