--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -64,6 +64,10 @@
   <string name="auth_info_add_wallet_title">Add Wallet</string>
   <string name="auth_info_subtitle">Select a wallet to log in</string>
   <string name="auth_info_title">Welcome back!</string>
+  <plurals name="auth_wallet_hardware_description">
+    <item quantity="one">%d card</item>
+    <item quantity="other">%d cards</item>
+  </plurals>
   <string name="auth_wallet_mobile_description">Phone Wallet</string>
   <string name="backup_complete_description">You successfully backed up your wallet.</string>
   <string name="backup_complete_seed_description">These words can’t be recovered if lost. Make sure to keep it somewhere secure.</string>
@@ -426,6 +430,7 @@
   <string name="hw_activation_need_description">To complete setup, back up your wallet and secure app access with a Access Code.</string>
   <string name="hw_activation_need_finish">Finish Now</string>
   <string name="hw_activation_need_title">Finish Wallet Activation</string>
+  <string name="hw_activation_need_warning_description">To complete setup, secure app access with Access Code.</string>
   <string name="hw_backup_google_drive_description">Recover an existing wallet stored in your Google Drive backup</string>
   <string name="hw_backup_google_drive_title">Google Drive Backup</string>
   <string name="hw_backup_need_action">Go to backup</string>
@@ -866,6 +871,7 @@
   <string name="send_date_format">%1$s, %2$s</string>
   <string name="send_destination_tag_field">Destination Tag</string>
   <string name="send_enter_address_field">Enter address</string>
+  <string name="send_enter_address_field_ens">Enter ENS name or address</string>
   <string name="send_error_address_same_as_wallet">Address is the same as wallet address</string>
   <string name="send_error_dust_amount_format">Minimum amount is %s</string>
   <string name="send_error_dust_change_format">Minimum change is %s</string>
@@ -947,11 +953,15 @@
   <string name="send_validation_invalid_amount">Invalid amount</string>
   <string name="send_validation_invalid_fee">Fee exceeds balance</string>
   <string name="send_validation_invalid_total">Total amount exceeds balance</string>
+  <string name="send_with_swap_change_token_alert_message">Are you sure you want to change the token? After changing, previous data will be reset.</string>
+  <string name="send_with_swap_change_token_alert_title">Changing token</string>
   <string name="send_with_swap_confirm_title">Swap and send</string>
   <string name="send_with_swap_notification_text">Send any token, and we’ll convert it on the way. Your recipient gets exactly what they need—seamlessly.</string>
   <string name="send_with_swap_recipient_amount_success_title">Recipient will receive</string>
   <string name="send_with_swap_recipient_amount_text">Will be sent a recipient</string>
   <string name="send_with_swap_recipient_amount_title">Amount to receive</string>
+  <string name="send_with_swap_remove_convert_alert_message">Are you sure you want to cancel the conversion? After changing, previous data will be reset.</string>
+  <string name="send_with_swap_remove_convert_alert_title">Confirm cancelation</string>
   <string name="send_with_swap_title">Send with swap</string>
   <string name="sent_transaction_sent_title">Transaction sent</string>
   <string name="settings_card_settings_footer">Prepare to scan card or ring you want to set up.</string>
@@ -1497,6 +1507,8 @@
   <string name="wc_transaction_request">Transaction request</string>
   <string name="wc_transaction_request_title">Transaction request</string>
   <string name="wc_unlimited_amount">Unlimited Amount</string>
+  <string name="wc_uri_already_used_description">Ensure that each pairing attempt uses a fresh and unique URI</string>
+  <string name="wc_uri_already_used_title">URI already used</string>
   <string name="wc_wallet_connect">Wallet connect</string>
   <string name="welcome_interrupted_backup_alert_discard">Discard</string>
   <string name="welcome_interrupted_backup_alert_message">You have an interrupted backup. Do you want to resume?</string>
