--- a/core/res/src/main/res/values-de/strings.xml
+++ b/core/res/src/main/res/values-de/strings.xml
@@ -947,9 +947,13 @@
   <string name="send_validation_invalid_fee">Die Gebühr geht über die Bilanz hinaus</string>
   <string name="send_validation_invalid_total">Der Gesamtbetrag geht über die Bilanz hinaus</string>
   <string name="send_with_swap_confirm_title">Tauschen und senden</string>
+  <string name="send_with_swap_convert_token_alert_message">Mit der Konvertierung fortfahren? Dadurch werden Deine vorherigen Daten gelöscht.</string>
+  <string name="send_with_swap_correct_recipient_network_notification_message">Das Senden einer anderen Währung führt zu deren unwiderruflichem Verlust.</string>
+  <string name="send_with_swap_correct_recipient_network_notification_title">Wähle das richtige Empfängernetzwerk</string>
   <string name="send_with_swap_notification_text">Sende uns ein Token, und wir konvertieren es unterwegs. Dein Empfänger erhält genau das, was er braucht – nahtlos.</string>
   <string name="send_with_swap_recipient_amount_text">Wird an den Empfänger gesendet</string>
   <string name="send_with_swap_recipient_amount_title">Zu erhaltender Betrag</string>
+  <string name="send_with_swap_remove_convert_alert_message">Möchtest Du die Konvertierung wirklich abbrechen? Deine bisherigen Daten werden gelöscht.</string>
   <string name="send_with_swap_title">Senden mit Swap</string>
   <string name="sent_transaction_sent_title">Transaktion gesendet</string>
   <string name="settings_card_settings_footer">Bereite das Scannen der Karte oder Ring vor, die du einrichten möchtest.</string>
@@ -1408,7 +1412,7 @@
   <string name="wc_alert_unsupported_method_title">Wir haben einen unbekannten Fehler festgestellt.</string>
   <string name="wc_alert_unsupported_networks_description">Tangem unterstützt derzeit das erforderliches Netzwerk von %s nicht.</string>
   <string name="wc_alert_unsupported_networks_title">Nicht unterstützte Netzwerke</string>
-  <string name="wc_alert_verified_domain_description">Tangem unterstützt ein erforderliches Netzwerk um %s</string>
+  <string name="wc_alert_verified_domain_description">Diese Domain hat die Überprüfungen bestanden und gilt als sicher, vertrauenswürdig und frei von bekannten Bedrohungen oder verdächtigen Aktivitäten. %s</string>
   <string name="wc_alert_verified_domain_title">Verifizierte Domain</string>
   <string name="wc_alert_wrong_card_description">Falsche Karte oder falscher Ring in der App ausgewählt</string>
   <string name="wc_alert_wrong_card_title">Wir haben eine Art Problem</string>
@@ -1432,7 +1436,7 @@
   <string name="wc_copy_data_button_text">Daten kopieren</string>
   <string name="wc_custom_allowance_title">Benutzerdefinierter Freibetrag</string>
   <string name="wc_disconnect_all">Alle trennen</string>
-  <string name="wc_disconnect_all_alert_desc">Text über die Trennung aller dApps</string>
+  <string name="wc_disconnect_all_alert_desc">Alle dApp-Sitzungen werden getrennt. Ihre Wallet wird nicht mehr mit dApps verbunden sein.</string>
   <string name="wc_disconnect_all_alert_title">Alle dApps trennen</string>
   <string name="wc_errors_invalid_domain_subtitle">Versuchen Sie erneut, mit einer neuen URI zu koppeln</string>
   <string name="wc_errors_invalid_domain_title">Ungültige dApp-Domain</string>
