--- a/core/res/src/main/res/values-fr/strings.xml
+++ b/core/res/src/main/res/values-fr/strings.xml
@@ -1324,6 +1324,7 @@
   <string name="wc_alert_unsupported_dapps_title">dApp non prise en charge</string>
   <string name="wc_alert_unsupported_method_description">Code d\'erreur : 8 005. Si le problème persiste, n\'hésitez pas à contacter notre support.</string>
   <string name="wc_alert_unsupported_method_title">Nous avons rencontré une erreur inconnue</string>
+  <string name="wc_alert_verified_domain_description">Ce domaine a passé les contrôles de vérification et est considéré comme sûr, fiable et exempt de menaces connues ou d’activités suspectes.%s</string>
   <string name="wc_allow_to_spend">Autoriser à dépenser</string>
   <string name="wc_common_address">Adresse</string>
   <string name="wc_common_loading">Chargement</string>
@@ -1333,7 +1334,7 @@
   <string name="wc_contents">Contenu</string>
   <string name="wc_copy_data_button_text">Copier les données</string>
   <string name="wc_disconnect_all">Déconnecter tout</string>
-  <string name="wc_disconnect_all_alert_desc">Texte sur la déconnexion de toutes les dApps</string>
+  <string name="wc_disconnect_all_alert_desc">Toutes les sessions dApp seront déconnectées. Votre portefeuille ne sera plus lié à aucune dApp.</string>
   <string name="wc_disconnect_all_alert_title">Déconnecter toutes les dApps</string>
   <string name="wc_errors_invalid_domain_subtitle">Essayez de jumeler à nouveau avec un nouvel URI</string>
   <string name="wc_errors_invalid_domain_title">Domaine dApp invalide</string>
