--- a/core/res/src/main/res/values/strings.xml
+++ b/core/res/src/main/res/values/strings.xml
@@ -71,8 +71,10 @@
   <string name="app_settings_enable_biometrics_description">Go to settings to enable biometric authentication in the Tangem App</string>
   <string name="app_settings_enable_biometrics_title">Enable biometric authentication</string>
   <string name="app_settings_off_biometrics_alert_message">Disabling %1$s will require you to enter your passcode to unlock the app and to interact with your wallet.</string>
+  <string name="app_settings_off_require_access_code_alert_message">You’ll be asked for your wallet’s access code later so we can securely store it for future use</string>
   <string name="app_settings_off_saved_access_code_alert_message">This will delete all the saved wallet access codes. Any further operation with the wallet will require submitting the access code.</string>
   <string name="app_settings_off_saved_wallet_alert_message">Removing the saved devices deletes all the saved wallets and their access codes from the app.</string>
+  <string name="app_settings_on_require_access_code_alert_message">This will delete all the saved wallet access codes. Any further interaction with the wallet will require submitting the access code.</string>
   <string name="app_settings_require_access_code">Require Access Code</string>
   <string name="app_settings_require_access_code_footer">This option disables biometric authentication for sensitive actions. You will be required to enter your access code every time, such as when signing a transaction.</string>
   <string name="app_settings_saved_access_codes">Save Access Code</string>
@@ -297,6 +299,7 @@
   <string name="common_transaction_status">Transaction status</string>
   <string name="common_transactions">Transactions</string>
   <string name="common_transfer">Transfer</string>
+  <string name="common_unable_to_load">Unable to load the data…</string>
   <string name="common_understand">I understand</string>
   <string name="common_unknown_error">There was an error. Please try again.</string>
   <string name="common_unreachable">Unreachable</string>
@@ -1519,7 +1522,7 @@
   <string name="wc_alert_unsupported_method_title">We\'ve encountered unknown error</string>
   <string name="wc_alert_unsupported_networks_description">Tangem does not currently support a required network by %s.</string>
   <string name="wc_alert_unsupported_networks_title">Unsupported networks</string>
-  <string name="wc_alert_verified_domain_description">Tangem support a required network by %s</string>
+  <string name="wc_alert_verified_domain_description">This domain has passed verification checks and is considered safe, reputable, and free from known threats or suspicious activity. %s</string>
   <string name="wc_alert_verified_domain_title">Verified domain</string>
   <string name="wc_alert_wrong_card_description">Wrong card or ring selected in the App</string>
   <string name="wc_alert_wrong_card_title">We\'ve got some kind of problem</string>
@@ -1547,7 +1550,7 @@
   <string name="wc_custom_allowance_title">Custom allowance</string>
   <string name="wc_dapp_disconnected">dApp disconnected</string>
   <string name="wc_disconnect_all">Disconnect all</string>
-  <string name="wc_disconnect_all_alert_desc">Text about discnected all dApps</string>
+  <string name="wc_disconnect_all_alert_desc">All dApp sessions will be disconnected. Your wallet will no longer be linked to any dApps.</string>
   <string name="wc_disconnect_all_alert_title">Disconect All dApps</string>
   <string name="wc_errors_invalid_domain_subtitle">Try pairing again with a fresh URI</string>
   <string name="wc_errors_invalid_domain_title">Invalid dApp domain</string>
@@ -1584,7 +1587,7 @@
   <string name="wc_unlimited_amount">Unlimited Amount</string>
   <string name="wc_uri_already_used_description">Ensure that each pairing attempt uses a fresh and unique URI</string>
   <string name="wc_uri_already_used_title">URI already used</string>
-  <string name="wc_wallet_connect">Wallet connect</string>
+  <string name="wc_wallet_connect">WalletConnect</string>
   <string name="wc_warning_transaction">Suspicious transaction</string>
   <string name="welcome_interrupted_backup_alert_discard">Discard</string>
   <string name="welcome_interrupted_backup_alert_message">You have an interrupted backup. Do you want to resume?</string>
